<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutor21</string>
    <string name="menu_settings">Settings</string>
    <string name="lblNoOfDecks">Number of Decks:</string>
    <string name="dfltNoOfDecks">2</string>
    <string name="lbl_Dealer">Dealer:</string>
    <string name="lblPlayer">Player:</string>
    <string name="lblCard1">Card 1:</string>
    <string name="lblCard2">Card 2:</string>
    <string name="btnDeal">Deal</string>
    <string name="btnHit">Hit</string>
    <string name="btnStick">Stick</string>
    <string name="btnDouble">Double</string>
    <string name="btnSplit">Split</string>
    <string name="radOnlyPairs">Pairs Only</string>
    <string name="radOnlySoft">Soft Hands Only (Ace + no Ace)</string>
    <string name="radOnlyHard">Hard Hands Only (No Aces)</string>
    <string name="radAllKinds">All Kinds of Hands</string>
    <string-array name="stacker_array">
        <item >Pairs Only</item>
        <item >Soft Hands Only (Ace + no Ace)</item>
        <item >Hard Hands Only (No Aces)</item>
        <item >All Kinds of Hands</item>
    </string-array>

</resources>